--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div class="topnav">
   <a class="active">Home</a>
-  <a href="#news">News</a>
+  <a href="#profile">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
