--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/stylesheet.css">
     </head>
 <body>
 
 <div class="topnav">
   <a class="active">Home</a>
-  <a href="#profile">News</a>
+  <a href="resources/profile.html">Profile</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
