--- a/index.html
+++ b/index.html
@@ -1,33 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/stylesheet.css">
-    </head>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/stylesheet.css">
+</head>
 
 
 <body>
   <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand mb-0 h1" href="index.html">Atilla Özbey</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="resources/about.html">About me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand mb-0 h1" href="index.html">Atilla Özbey</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="navbar-nav ms-auto" id="navbar-items">
+            <a class="nav-link" href="resources/about.html">About me</a>
+            <a class="nav-link" href="resources/blog.html">Blog</a>
+            <a class="nav-link" href="resources/dashboard.html">Dashboard</a>
+            <a class="nav-link" href="resources/faq.html">FAQ</a>
+          </div>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   </div>
+
+  <div class="container">
+    <div class="row gx-5 align-items-center" id="intro-row">
+        <div class="col col-lg-10">
+            <h1 class="heading-big">HZ University of applied Sciences</h1>
+            <p class="text-gray">Student HBO ICT op de <a href="https://hz.nl/opleidingen/hbo-ict"
+              style="color: black;" target="_blank" class="link">HZ</a>.
+          Shiftmanager Dominos. Tech fan.</p>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+  <div class="row gx-5 align-items-center" id="text-one">
+      <div class="col col-lg-5">
+          <h1 class="heading-medium">Waarom HBO ICT?</h1>
+          <p class="text-medium">Zelf ben ik altijd erg gefascineerd over nieuwe tech snufjes. Ik heb hiervoor de opleiding software developer op het Scalda gedaan. 
+            Ik hoop met deze opleiding mijn kennis the vergroten en veel nieuwe dingen te leren. </p>
+      </div>
+  </div>
+
+  <div class="hover02">
+    <figure>
+        <img src="images/html-logo.png" alt="html-logo">
+      </figure>
+      <figure>
+        <img src="images/css-logo.png" alt="css-logo">
+      </figure>
+      <figure>
+        <img src="images/javascript-logo.png" alt="javascript-logo">
+      </figure>
+      <figure>
+        <img src="images/vuejs-logo.png" alt="vuejs-logo">
+      </figure>
+      <figure>
+        <img src="images/java-logo.png" alt="java-logo">
+      </figure>
+</div>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </body>
+
 </html>
