--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light navbar-light animate__animated animate__fadeInDown">
       <div class="container-fluid">
         <a class="navbar-brand mb-0 h1" href="index.html">Atilla Özbey</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -34,7 +35,7 @@
             <h1 class="heading-big">HZ University of applied Sciences</h1>
             <p class="text-gray">Student HBO ICT op de <a href="https://hz.nl/opleidingen/hbo-ict"
               style="color: black;" target="_blank" class="link">HZ</a>.
-          Shiftmanager Dominos. Tech fan.</p>
+          Shiftmanager Dominos. Fan van nieuwe gadgets/technologie.</p>
         </div>
     </div>
 </div>
@@ -46,9 +47,16 @@
           <p class="text-medium">Zelf ben ik altijd erg gefascineerd over nieuwe tech snufjes. Ik heb hiervoor de opleiding software developer op het Scalda gedaan. 
             Ik hoop met deze opleiding mijn kennis the vergroten en veel nieuwe dingen te leren. </p>
       </div>
+      <div class="col col-md-auto">
+        <div class="text-center">
+            <img src="images/programming.jpg" alt="programming-pic" width="450" height="auto"
+                class="pic-rounded img-fluid programming-pic">
+          </div>
+       </div>
+     </div>
   </div>
 
-  <div class="hover02">
+    <div class="container hover02 ">
     <figure>
         <img src="images/html-logo.png" alt="html-logo">
       </figure>
@@ -65,9 +73,13 @@
         <img src="images/java-logo.png" alt="java-logo">
       </figure>
     </div>
+    <div class="col col-lg-5" id="footer">
+      <footer>
+        <p class="text-center text-muted" id="copyright">
+          Copyright © 2023 Atilla Özbey. All rights reserved.</p>
+    </footer>
   </div>
-</div>
-
+  </div>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </body>
 
