--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
+  <link href="js/index.js" />
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg bg-light navbar-light animate__animated animate__fadeInDown">
+    <nav class="navbar navbar-expand-lg navbar-light animate__animated animate__fadeInDown">
       <div class="container-fluid">
         <a class="navbar-brand mb-0 h1" href="index.html">Atilla Özbey</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -20,7 +21,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div class="navbar-nav ms-auto" id="navbar-items">
-            <a class="nav-link" href="resources/about.html">About me</a>
+            <a class="nav-link" href="resources/profile.html">Over mij</a>
             <a class="nav-link" href="resources/blog.html">Blog</a>
             <a class="nav-link" href="resources/dashboard.html">Dashboard</a>
             <a class="nav-link" href="resources/faq.html">FAQ</a>
@@ -29,35 +30,36 @@
       </div>
     </nav>
 
-  <div class="container">
-    <div class="row gx-5 align-items-center" id="intro-row">
+    <div class="container">
+      <div class="row gx-5 align-items-center" id="intro-row">
         <div class="col col-lg-10">
-            <h1 class="heading-big">HZ University of applied Sciences</h1>
-            <p class="text-gray">Student HBO ICT op de <a href="https://hz.nl/opleidingen/hbo-ict"
-              style="color: black;" target="_blank" class="link">HZ</a>.
-          Shiftmanager Dominos. Fan van nieuwe gadgets/technologie.</p>
+          <h1 class="heading-big">HZ University of applied Sciences</h1>
+          <p class="text-gray">Student HBO ICT op de <a href="https://hz.nl/opleidingen/hbo-ict" style="color: black;"
+              target="_blank" class="link">HZ</a>.
+            Shiftmanager Dominos. Fan van nieuwe gadgets/technologie.</p>
         </div>
-    </div>
-</div>
-
-<div class="container">
-  <div class="row gx-5 align-items-center" id="text-one">
-      <div class="col col-lg-5">
-          <h1 class="heading-medium">Waarom HBO ICT?</h1>
-          <p class="text-medium">Zelf ben ik altijd erg gefascineerd over nieuwe tech snufjes. Ik heb hiervoor de opleiding software developer op het Scalda gedaan. 
-            Ik hoop met deze opleiding mijn kennis the vergroten en veel nieuwe dingen te leren. </p>
       </div>
-      <div class="col col-md-auto">
-        <div class="text-center">
+    </div>
+
+    <div class="container">
+      <div class="row gx-5 align-items-center" id="text-one">
+        <div class="col col-lg-5">
+          <h1 class="heading-medium">Waarom HBO ICT?</h1>
+          <p class="text-medium">Zelf ben ik altijd erg gefascineerd over nieuwe tech snufjes. Ik heb hiervoor de
+            opleiding software developer op het Scalda gedaan.
+            Ik hoop met deze opleiding mijn kennis the vergroten en veel nieuwe dingen te leren. </p>
+        </div>
+        <div class="col col-md-auto">
+          <div class="text-center">
             <img src="images/programming.jpg" alt="programming-pic" width="450" height="auto"
-                class="pic-rounded img-fluid programming-pic">
+              class="pic-rounded img-fluid programming-pic">
           </div>
-       </div>
-     </div>
-  </div>
+        </div>
+      </div>
+    </div>
 
     <div class="container hover02 ">
-    <figure>
+      <figure>
         <img src="images/html-logo.png" alt="html-logo">
       </figure>
       <figure>
@@ -73,13 +75,17 @@
         <img src="images/java-logo.png" alt="java-logo">
       </figure>
     </div>
-    <div class="col col-lg-5" id="footer">
-      <footer>
-        <p class="text-center text-muted" id="copyright">
-          Copyright © 2023 Atilla Özbey. All rights reserved.</p>
-    </footer>
   </div>
-  </div>
+
+  <footer>
+    <div class="container text-center text-md-start mt-5">
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+        <p>&nbsp;</p>
+      </div>
+    </div>
+    <p class="text-center text-muted" id="copyright">Copyright © 2023 Atilla Özbey All rights reserved.</p>
+  </footer>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </body>
 
