--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
       </div>
     </nav>
 
+    <div class="social-media">
+      <a href="https://www.linkedin.com/in/atilla-%C3%B6zbey-98a653178/" target="_blank"
+        class="linkedin-link w-inline-block"><img src="images/linkedin-logo.webp" loading="lazy" width="24"
+          alt="linkedin" class="social-icons"></a>
+      <a href="https://github.com/AtillaOzbey" target="_blank" class="github-link w-inline-block"><img
+          src="images/github-logo.webp" loading="lazy" width="24" alt="github" class="social-icons"></a>
+      <a href="https://discord.com/users/254718612458176512" target="_blank" class="github-link w-inline-block"><img
+          src="images/discord-logo.png" loading="lazy" width="24" alt="github" class="social-icons"></a>
+    </div>
+
     <div class="container">
       <div class="row gx-5 align-items-center" id="intro-row">
         <div class="col col-lg-10">
@@ -57,7 +67,6 @@
         </div>
       </div>
     </div>
-
     <div class="container hover02 ">
       <figure>
         <img src="images/html-logo.png" alt="html-logo">
@@ -76,7 +85,6 @@
       </figure>
     </div>
   </div>
-
   <footer>
     <div class="container text-center text-md-start mt-5">
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
