faq page with questions
created a faq page with bootstrap added questions and answers in <ul> and <li> tags

--- a/resources/faq.html
+++ b/resources/faq.html
@@ -21,9 +21,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="navbar-nav ms-auto" id="navbar-items">
-                        <a class="nav-link" href="resources/profile.html">Over mij</a>
-                        <a class="nav-link" href="resources/blog.html">Blog</a>
-                        <a class="nav-link" href="resources/dashboard.html">Dashboard</a>
+                        <a class="nav-link" href="profile.html">Over mij</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="dashboard.html">Dashboard</a>
                         <a class="nav-link" href="faq.html">FAQ</a>
                     </div>
                 </div>
@@ -41,4 +41,137 @@
                     alt="github" class="social-icons"></a>
         </div>
 
+        <div class="container">
+            <div class="row gx-5 align-items-center" id="intro-row">
+                <div class="col col-lg-9">
+                    <h1 class="heading-big">FAQ</h1>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row gx-5 align-items-center" id="intro-row">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                aria-controls="flush-collapseOne">
+                                Hoe print je een document vanaf je computer op hz?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>
+                                        Door naar print.hz.nl te gaan. Hierna legt u de schoolpas in het vakje bij de printer, hierna is uw geuploade bestand te zien. Nu hoeft u alleen nog maar op print te drukken.
+                                    </li>
+                              
+                                </ul>              
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                aria-controls="flush-collapseTwo">
+                                Hoe kan je een document scannen en naar je laptop sturen?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>
+                                        Een document scannen gaat via de printer. U legt de documenten in het scanvak van de printer.
+                                        </li>
+                                        <li>
+                                        Hierna legt u uw pasje erop en kiest u voor de optie scannen. 
+                                        </li>
+                                        <li>
+                                        Dan kunt u kiezen waar u het naartoe wilt sturen en dan staat je eigen e-mail adres bovenaan, hier hoeft u alleen op te klikken.
+                                        </li>
+                                        <li>
+                                         Vervolgens keurt u het goed, hij scant de documenten en deze scans worden verzonden naar uw e-mail en de documenten kunt u weer uit de printer pakken.
+                                        </li>
+                                    </li>
+                                </ul>                             
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                aria-controls="flush-collapseThree">
+                                Wat moet je doen als je ziek bent?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>
+                                        Neem contact op met een docent of helpdesk. Volg de lessen online verder om achterstand te voorkomen.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                aria-controls="flush-collapseFour">
+                                Hoe reserveer je een projectruimte?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFour" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <ul>
+                                    <li>
+                                        Een projectruimte is te reserveren via het zelfservice portaal op 
+                                        <a href="https://hz.nl/secure" target="_blank">hz.nl/secure.</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingFive">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseFive" aria-expanded="false"
+                                aria-controls="flush-collapseFive">
+                                Wat zijn de instructies als je je auto wilt parkeren op de hz?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFive" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body text-start">
+                                
+                                <ul>
+                                    <li>
+                                        Voor studenten en medewerkers van de HZ kan er geparkeert worden op de Poelendaelesingel 10. 
+                                        Daar kunt u parkeren bij PZEM met een geldige HZ pas, heeft u deze pas nog niet of doet hij het niet? 
+                                        Dan kunt u ook via de poorten bellen met de HZ die ze dan open kunnen doen.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <footer class="my-4">
+                <p class="text-center text-muted" id="copyright">Copyright © 2023 Atilla Özbey. All rights reserved.</p>
+            </footer>
+        </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+          </body>
 </html>
