--- a/resources/dashboard.html
+++ b/resources/dashboard.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/stylesheet.css">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
+    <link href="js/index.js" />
+    <link rel="stylesheet" href="css/stylesheet.css">
 </head>
+
 <body>
-    <div class="topnav">
-        <a href="../index.html">Home</a>
-        <a class="active" href="profile.html">Profile</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
-    <h2>TEST123</h2>
 </body>
+
 </html>
