--- a/resources/dashboard.html
+++ b/resources/dashboard.html
@@ -63,6 +63,7 @@
                         <th scope="col">Naam</th>
                         <th scope="col">Toets</th>
                         <th scope="col">Gewicht</th>
+                        <th scope="col">Cijfers</th>
                     </tr>
                 </thead>
                 <tbody>
