--- a/resources/dashboard.html
+++ b/resources/dashboard.html
@@ -61,59 +61,74 @@
                     <tr>
                         <th scope="col">Blok</th>
                         <th scope="col">Naam</th>
-                        <th scope="col">Toets</th>
-                        <th scope="col">Gewicht</th>
+                        <th scope="col">EC</th>
+                        <th scope="col">Examen</th>
                         <th scope="col">Cijfers</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>CU75002V2 - Computer Science Basics (Semester 1 - 2023/2024)</td>
-                        <td>TOETS01 - Theorietentamen</td>
-                        <td>100%</td>
+                        <td>PCO: Program- & career Orientation</td>
+                        <td>2,5</td>
+                        <td>CU75001</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>1</td>
-                        <td>CU75001V3 - Program- & Career Orientation (Semester 1 - 2023/2024)</td>
-                        <td>TOETS01 - Assessment website</td>
-                        <td>100%</td>
+                        <td>CBA: Computer Science Basics</td>
+                        <td>5</td>
+                        <td>CU75002</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>1</td>
-                        <td>CU75003V1 - Programming Basics (Semester 1 - 2023/2024)</td>
-                        <td>TOETS01 - Casustoets</td>
-                        <td>100%</td>
+                        <td>PBA: Programming Basics</td>
+                        <td>5</td>
+                        <td>CU75003</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>CU75004V1 - Object-Oriented Programming (Semester 1 - 2023/2024)</td>
-                        <td>TOETS01 - Groepsopdracht</td>
-                        <td>50%</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>CU75004V1 - Object-Oriented Programming (Semester 1 - 2023/2024)</td>
-                        <td>TOETS02 - Casustoets</td>
-                        <td>50%</td>
+                        <td>OOP: Object Oriented Programming</td>
+                        <td>10</td>
+                        <td>CU75004</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>CU75068V3 - Personal Professional Development Exploration (Semester 1 - 2023/2024)</td>
-                        <td>TOETS01 - Criterium focused interview</td>
-                        <td>100%</td>
+                        <td>FPR1: Framework Project 1</td>
+                        <td>10</td>
+                        <td>CU75080</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <td>x</td>
+                        <td>3/4</td>
+                        <td>Business IT Consultancy Basics</td>
+                        <td>2,5</td>    
+                        <td>CU75081</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>FPR1: Framework Project 2</td>
+                        <td>10</td>
+                        <td>CU75011</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>-</td>
+                        <td>Personal Professional Development: Exploration</td>
+                        <td>12,5</td>
+                        <td>CU75068</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>-</td>
                         <td>HZ personality</td>
+                        <td>2,5</td>
                         <td>Portfolio</td>
-                        <td>100%</td>
-                    </tr>
-                    <tr>
-                        <td>x</td>
-                        <td>IT personality</td>
-                        <td>Portfolio</td>
-                        <td>100%</td>
+                        <td>-</td>
                     </tr>
                 </tbody>
         </table>
