--- a/resources/faq.html
+++ b/resources/faq.html
@@ -69,10 +69,12 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        Door naar print.hz.nl te gaan. Hierna legt u de schoolpas in het vakje bij de printer, hierna is uw geuploade bestand te zien. Nu hoeft u alleen nog maar op print te drukken.
+                                        Door naar print.hz.nl te gaan. Hierna legt u de schoolpas in het vakje bij de
+                                        printer, hierna is uw geuploade bestand te zien. Nu hoeft u alleen nog maar op
+                                        print te drukken.
                                     </li>
-                              
-                                </ul>              
+
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -89,19 +91,22 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        Een document scannen gaat via de printer. U legt de documenten in het scanvak van de printer.
-                                        </li>
-                                        <li>
-                                        Hierna legt u uw pasje erop en kiest u voor de optie scannen. 
-                                        </li>
-                                        <li>
-                                        Dan kunt u kiezen waar u het naartoe wilt sturen en dan staat je eigen e-mail adres bovenaan, hier hoeft u alleen op te klikken.
-                                        </li>
-                                        <li>
-                                         Vervolgens keurt u het goed, hij scant de documenten en deze scans worden verzonden naar uw e-mail en de documenten kunt u weer uit de printer pakken.
-                                        </li>
+                                        Een document scannen gaat via de printer. U legt de documenten in het scanvak
+                                        van de printer.
                                     </li>
-                                </ul>                             
+                                    <li>
+                                        Hierna legt u uw pasje erop en kiest u voor de optie scannen.
+                                    </li>
+                                    <li>
+                                        Dan kunt u kiezen waar u het naartoe wilt sturen en dan staat je eigen e-mail
+                                        adres bovenaan, hier hoeft u alleen op te klikken.
+                                    </li>
+                                    <li>
+                                        Vervolgens keurt u het goed, hij scant de documenten en deze scans worden
+                                        verzonden naar uw e-mail en de documenten kunt u weer uit de printer pakken.
+                                    </li>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -118,7 +123,8 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        Neem contact op met een docent of helpdesk. Volg de lessen online verder om achterstand te voorkomen.
+                                        Neem contact op met een docent of helpdesk. Volg de lessen online verder om
+                                        achterstand te voorkomen.
                                     </li>
                                 </ul>
                             </div>
@@ -137,7 +143,7 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        Een projectruimte is te reserveren via het zelfservice portaal op 
+                                        Een projectruimte is te reserveren via het zelfservice portaal op
                                         <a href="https://hz.nl/secure" target="_blank">hz.nl/secure.</a>
                                     </li>
                                 </ul>
@@ -155,11 +161,13 @@
                         <div id="flush-collapseFive" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body text-start">
-                                
+
                                 <ul>
                                     <li>
-                                        Voor studenten en medewerkers van de HZ kan er geparkeert worden op de Poelendaelesingel 10. 
-                                        Daar kunt u parkeren bij PZEM met een geldige HZ pas, heeft u deze pas nog niet of doet hij het niet? 
+                                        Voor studenten en medewerkers van de HZ kan er geparkeert worden op de
+                                        Poelendaelesingel 10.
+                                        Daar kunt u parkeren bij PZEM met een geldige HZ pas, heeft u deze pas nog niet
+                                        of doet hij het niet?
                                         Dan kunt u ook via de poorten bellen met de HZ die ze dan open kunnen doen.
                                     </li>
                                 </ul>
@@ -175,7 +183,8 @@
                 <p class="text-center text-muted" id="copyright">Copyright © 2023 Atilla Özbey. All rights reserved.</p>
             </footer>
         </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-          </body>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
