Table accordion added
added working table accordion +data

--- a/resources/dashboard.html
+++ b/resources/dashboard.html
@@ -72,22 +72,45 @@
                 </thead>
                 <tbody>
                     <tr data-bs-toggle="collapse" data-bs-target="#r1">
-                        <td>1<button class="btn btn-default btn-xs">
+                        <td scope="row">1
+                            <button class="arrow-button btn btn-default btn-xs">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                     class="bi bi-chevron-compact-down" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z" />
                                 </svg>
-                            </button></td>
+                            </button>
+                        </td>
                         <td>PCO: Program- & career Orientation</td>
                         <td>2,5</td>
                         <td>CU75001</td>
                         <td>-</td>
                     </tr>
-                    
+
                     <tr class="collapse accordion-collapse" id="r1" data-bs-parent=".table">
-                        <thead>
-                        </thead>
+                        <td colspan="12">
+                            <table class="table accordion">
+                                    <thead>
+                                        <tr>
+                                            <th>Toets code</th>
+                                            <th>Examen type</th>
+                                            <th>Examen beschrijving</th>
+                                            <th>Gewicht</th>
+                                            <th>Minimale score</th>
+                                            <th>Blok codes</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>TOETS01 (VT)</td>
+                                            <td>Induvidueel process</td>
+                                            <td>Website</td>
+                                            <td>100%</td>
+                                            <td>5.5</td>
+                                            <td>S1.5, S1.6 & S1.10</td>
+                                        </tr>
+                                    </tbody>
+                             </table>
                     </tr>
                     <tr>
                         <td>1</td>
