--- a/resources/faq.html
+++ b/resources/faq.html
@@ -69,7 +69,7 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        Door naar print.hz.nl te gaan. Hierna legt u de schoolpas in het vakje bij de
+                                        Door naar https://hz.mynetpay.nl/ te gaan. Hierna legt u de schoolpas in het vakje bij de
                                         printer, hierna is uw geuploade bestand te zien. Nu hoeft u alleen nog maar op
                                         print te drukken.
                                     </li>
