--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="row gx-5 align-items-center" id="intro-row">
         <div class="col col-lg-10">
           <h1 class="heading-big">HZ University of applied Sciences</h1>
-          <p class="text-gray">Student HBO ICT op de <a href="https://hz.nl/opleidingen/hbo-ict" style="color: black;"
+          <p class="text-gray">Student HBO ICT op de <a href="https://hz.nl/opleidingen/hbo-ict" class="index_link"
               target="_blank" class="link">HZ</a>.
             Shiftmanager Dominos. Fan van nieuwe gadgets/technologie.</p>
         </div>
