--- a/resources/profile.html
+++ b/resources/profile.html
@@ -9,7 +9,6 @@
     <title>Atilla Özbey - FAQ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
-    <link href="js/index.js" />
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 
@@ -33,16 +32,6 @@
                 </div>
             </div>
         </nav>
-        <div class="container">
-            <div class="row gx-5 align-items-center" id="intro-row">
-                <div class="col col-lg-9">
-                    <h1 class="heading-big">Over mij</h1>
-                </div>
-            </div>
-            <div class="col col-md-5">
-                <p class="text-big">Mijn naam is Atilla, 22 jaar oud</p>
-            </div>
-        </div>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/atilla-%C3%B6zbey-98a653178/" target="_blank"
                 class="linkedin-link w-inline-block"><img src="../images/linkedin-logo.webp" loading="lazy" width="24"
@@ -53,6 +42,60 @@
                 class="github-link w-inline-block"><img src="../images/discord-logo.png" loading="lazy" width="24"
                     alt="github" class="social-icons"></a>
         </div>
+
+        <div class="container">
+            <div class="row gx-5 align-items-center" id="text-one">
+                <div class="col col-md-5">
+                    <h1 class="heading-big">Hoi allemaal</h1>
+                    <p class="text-big">Gefascineerd door nieuwe gadgets en technologie. Passie om nieuwe dingen te
+                        leren en mijn werk te verbeteren</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row gx-5 align-items-center" id="text-one">
+                <div class="col col-lg-5">
+                    <h1 class="heading-medium">Over mij</h1>
+                    <p class="text-medium">Hoi ik ben Atilla, 22 jaar en ik woon in Middelburg.
+                        Ik ben student op de HZ en mijn vrije tijd ben ik shiftmanager bij domino's pizza.
+                        Mijn hobby's zijn gamen, tech en leuke activiteiten doen met vrienden.
+                    </p>
+                </div>
+                <div class="col col-md-auto">
+                    <div class="text-center">
+                        <img src="../images/coding.gif" alt="coding-gif" width="450" height="auto"
+                            class="pic-rounded img-fluid programming-pic">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row gx-5 align-items-center" id="text-one">
+                <div class="col col-lg-5">
+                    <button type="button" class="btn btn-outline-dark">HTML</button>
+                    <button type="button" class="btn btn-outline-dark">CSS</button>
+                    <button type="button" class="btn btn-outline-dark">Java</button>
+                    <button type="button" class="btn btn-outline-dark">Javascript</button>
+                    <button type="button" class="btn btn-outline-dark">Vue</button>
+                    <button type="button" class="btn btn-outline-dark">Scrum</button>
+                    <button type="button" class="btn btn-outline-dark">Firebase</button>
+                    <button type="button" class="btn btn-outline-dark">MySQL</button>
+                    <button type="button" class="btn btn-outline-dark">Bootstrap</button>
+                    <button type="button" class="btn btn-outline-dark">Git</button>
+                </div>
+                <div class="col col-lg-5">
+                    <h1 class="heading-medium">Mijn ervaring in IT</h1>
+                    <p class="text-medium">Ik ben afgestuurd op het Scalda als software developer MBO-4.
+                        Ook heb ik hierbij 2 keer stage gelopen. Door de stages heb ik ook ervaring met vue.js en
+                        firebase opgedaan.
+                        Op Scalda zelf heb ik ook veel met Java gewerkt in verschillende projecten
+                    </p>
+                </div>
+            </div>
+        </div>
+
         <div class="container">
             <footer class="my-4">
                 <p class="text-center text-muted" id="copyright">Copyright © 2023 Atilla Özbey. All rights reserved.</p>
@@ -60,4 +103,5 @@
         </div>
     </div>
 </body>
+
 </html>
