--- a/resources/dashboard.html
+++ b/resources/dashboard.html
@@ -40,9 +40,9 @@
                         <nobr>Mijn studie monitor</nobr>
                     </h1>
                     <p>&nbsp;</p>
-                    <p class="text-big">Informatie over de huidige status van mijn studie. Hieronder staat een tabel met
+                    <p class="text-medium">Informatie over de huidige status van mijn studie. Hieronder staat een tabel met
                         de informatie over de toetsen van dit jaar. </p>
-                    <p class="text-big"> Onder de tabel staat een voortgangsbalk waar makkelijk mee te zien is hoe ver
+                    <p class="text-medium"> Onder de tabel staat een voortgangsbalk waar makkelijk mee te zien is hoe ver
                         ik ben.
                         Aan het eind van het jaar is het de bedoeling dat ik minimaal 45EC heb zodat ik geen NBSA krijg.
                         </br>
